ensure actions are horizontally aligned

--- a/static/css/permits.css
+++ b/static/css/permits.css
@@ -360,6 +360,7 @@ th.actions {
   background-color: var(--primary-color);
   color: white;
   border-radius: 0;
+  min-width: 150px;
 }
 
 .center-table {
